<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
              a:orientation="vertical"
              a:layout_width="fill_parent"
              a:layout_height="fill_parent">

    <LinearLayout a:orientation="horizontal"
                  a:layout_width="fill_parent"
                  a:layout_height="wrap_content">
        <Button a:id="@+id/registerProductButton"
                a:text="@string/registerProduct"
                a:layout_width="wrap_content"
                a:layout_height="wrap_content"/>

        <Button a:id="@+id/showProductButton"
                a:text="@string/showProduct"
                a:layout_width="wrap_content"
                a:layout_height="wrap_content"/>

        <Button a:id="@+id/removeProductButton"
                a:text="@string/removeProduct"
                a:layout_width="wrap_content"
                a:layout_height="wrap_content"/>
    </LinearLayout>

    <Spinner
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:id="@+id/selectItemGroupSpinner" a:layout_gravity="center_horizontal"/>
    <ListView
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:id="@+id/listView"/>
    <ListView a:id="@+id/scannedItemList"
              a:layout_width="fill_parent"
              a:layout_height="fill_parent"/>
    <GridView
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:id="@+id/gridView"/>

</LinearLayout>
